--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -28,7 +28,8 @@
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <!-- Bootstrap core CSS -->
     <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
 
@@ -66,7 +67,7 @@
 
     <!-- Ungineering footer -->
     <div class="footer">
-        <strong>Developed by:</strong> GNU/Linux Users' Group NIT Durgapur
+        <span class="footertxt">Developed by: GNU/Linux Users' Group NIT Durgapur</span>
         <img src="{% static "img/glug_logo.png" %}"/>
     </div>
 
