--- a/core/templates/core/includes/navbar.html
+++ b/core/templates/core/includes/navbar.html
@@ -18,25 +18,25 @@
             <!--Links-->
             <ul class="navbar-nav">
                 <li class="nav-item {% if current == 'Home' %}active{% endif %}">
-                    <a class="nav-link" href="/">Home</a>
+                    <a class="nav-link" href="/">Home <i class="fa fa-home" style="font-size:24px"></i></a>
                 </li>
                 <li class="nav-item {% if current == 'Market' %}active{% endif %}">
-                    <a class="nav-link" href="/market">Market</a>
+                    <a class="nav-link" href="/market">Market <i class='fas fa-cart-plus' style='font-size:24px'></i></a>
                 </li>
                 <li class="nav-item {% if current == 'Transactions' %}active{% endif %}">
-                    <a class="nav-link" href="/transactions">Transactions</a>
+                    <a class="nav-link" href="/transactions">Transactions <i class='far fa-credit-card' style='font-size:24px'></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link {% if current == 'Leaderboard' %}active{% endif %}" href="/leaderboard">Leaderboard</a>
+                    <a class="nav-link {% if current == 'Leaderboard' %}active{% endif %}" href="/leaderboard">Leaderboard <i class='fas fa-clipboard-list' style='font-size:24px'></i></a>
                 </li>
                 <li class="nav-item {% if current == 'Rules' %}active{% endif %}">
-                    <a class="nav-link" href="/rules">Rules</a>
+                    <a class="nav-link" href="/rules">Rules <i class='fa fa-file' style='font-size:24px'></i></a>
                 </li>
                 <li class="nav-item {% if current == 'Engage' %}active{% endif %}">
-                    <a class="nav-link" href="/engage">Engage</a>
+                    <a class="nav-link" href="/engage">Engage <i class='fas fa-comments' style='font-size:24px'></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/logout">Logout</a>
+                    <a class="nav-link" href="/logout">Logout <i class='fa fa-frown-o' style='font-size:24px'></i></a>
                 </li>
 
             </ul>
