--- a/core/templates/core/transactions.html
+++ b/core/templates/core/transactions.html
@@ -9,20 +9,20 @@
 <!--Main layout-->
 <div class="container transactions">
     <br>
-    <h1>Transactions</h1>
+    <h1 class="head">Transactions</h1>
     <hr>
     <h5>Cash in your hand: $<span id="playercash">{{ player.cash }}</span></h5>
     <br>
     <input type="text" id="market-search" onkeyup="marketSearch()" placeholder="Search for stock names..">
     <br><br>
-    
+
     <table class="table transactions-sheet" >
     	<thead>
     		<tr>
-    			<th scope="col"> Stock name</th>
-    			<th scope="col"> Status</th>
+    			<th scope="col" > Stock name</th>
+    			<th scope="col" > Status</th>
     			<th scope="col"> Quantity</th>
-    			<th scope="col"> Stock code</th>
+    			<th scope="col" > Stock code</th>
     			<th scope="col"> Price</th>
     			<th scope="col"> Gain/loss</th>
     		</tr>
@@ -54,7 +54,7 @@
     </table>
 
 
-    
+
 
 </div>
 
