--- a/core/templates/core/leaderboard.html
+++ b/core/templates/core/leaderboard.html
@@ -10,13 +10,13 @@
 <div class="container leaderboard">
     <br>
     {% if message %}
-      <h2 class="text-center">{{message.first}}</h1>
-      <h3 class="text-center">{{message.second}}</h2>
+      <h2 class="text-center">{{message.first}}</h2>
+      <h3 class="text-center">{{message.second}}</h3>
       <br>
       <hr>
       <h1 class="text-center">Leaderboard</h1>
     {% else %}
-      <h1>Leaderboard</h1>
+      <h1 class="head"><b>Leaderboard</b></h1>
     {% endif %}
     <hr>
     <br>
