--- a/core/templates/core/market.html
+++ b/core/templates/core/market.html
@@ -9,9 +9,9 @@
 <!--Main layout-->
 <div class="container market">
     <br>
-    <h1>Market</h1>
+    <h1 class="head">Market</h1>
     <hr>
-    <h5>Cash in your hand: $<span id="playercash">{{ player.cash }}</span></h5>
+    <h5 style='color:blue'>Cash in your hand: $<span id="playercash">{{ player.cash }}</span></h5>
     <br>
     <input type="text" id="market-search" onkeyup="marketSearch()" placeholder="Search for stock names..">
     <br><br>
