--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -104,8 +104,9 @@ body {
   }
 }
 .footertxt{
-  border-radius: 10%;
-  background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+  border-radius: 2%;
+  background: linear-gradient(-180deg, #BCC5CE 0%, #929EAD 98%), radial-gradient(at top left, rgba(255,255,255,0.30) 0%, rgba(0,0,0,0.30) 100%);
+ background-blend-mode: screen;
   box-shadow: 5px 5px 5px;
   padding: 3px;
 }
@@ -123,7 +124,7 @@ body {
   bottom:57%;
   top:0;
   background: rgb(0, 0, 0); /* Fallback color */
-  background: rgba(0, 0, 0, 0.4); /* Black background with 0.5 opacity */
+  background: rgba(0, 0, 0, 0.6); /* Black background with 0.5 opacity */
   color: #f1f1f1;
   width: 100%;
   padding: 20px;
@@ -257,7 +258,12 @@ body {
   padding:3px;
   box-shadow: 4px 4px 4px;
 }
+th{
+  color:blue;
+  box-shadow: 3px 3px 3px;
+  text-align: center;
 
+}
 
 
 
@@ -274,9 +280,10 @@ body {
     font-size: 1.25em;
 }
 .navbar ul li a:hover{
-  background-color: green;}
+  background-color: white;
+  color:black !important;}
 .head{
-  background-image: linear-gradient(-225deg, #77FFD2 0%, #6297DB 48%, #1EECFF 100%);
+  background-image: linear-gradient(45deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%);
   text-align: center;
   box-shadow: 6px 6px 6px grey;
 }
@@ -284,7 +291,7 @@ body {
 .block{
   background-image: linear-gradient(to right, #ffecd2 0%, #fcb69f 100%);
   border-radius: 8%;
-  padding:1px;
+  padding:3px;
   text-align: center;
 }
 .block:hover{
