--- a/core/templates/core/includes/rules.html
+++ b/core/templates/core/includes/rules.html
@@ -7,7 +7,7 @@
         and cash wins the game.
     </h5><br>
     <hr><br><div class="row"><div class="col-sm-5">
-    <h1><b>Rules</b></h1>
+    <h1 style='color:blue'><b>Rules</b></h1>
     <hr>
     <ol>
         <li>Freemex contest for Aavishkar 2.0 will begin at<br> <span class="time"> 7PM on 29 Oct 2018</span>.</li>
@@ -18,7 +18,7 @@
         <li>A player must participate in fruitful trade atleast once in order to win.</li>
     </ol></div><div class="col-sm-1"></div>
     <div class="col-sm-5">
-    <h1><b>Note</b></h1>
+    <h1 style='color:blue'><b>Note</b></h1>
     <hr>
     <ol>
         <li>Stock prices are updated every minute.</li>
