--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -62,12 +62,14 @@
     {% block content %}{% endblock %}
 
     <!-- Social share icons -->
+   <br><br><br>
+
     <div class="sharethis-inline-share-buttons"></div>
     <hr>
 
     <!-- Ungineering footer -->
     <div class="footer">
-        <span class="footertxt">Developed by: GNU/Linux Users' Group NIT Durgapur</span>
+        Developed by: GNU/Linux Users' Group NIT Durgapur
         <img src="{% static "img/glug_logo.png" %}"/>
     </div>
 
