--- a/core/templates/core/engage.html
+++ b/core/templates/core/engage.html
@@ -7,7 +7,7 @@
 <!--Main layout-->
 <div class="container engage">
     <br>
-    <h1 class="head"><b>Engage</b></h1>
+    <h1><i class='fas fa-comments' style='font-size:48px;color:red'></i><b>  Engage</b></h1>
     <hr>
     <br>
 
