--- a/core/templates/core/includes/navbar.html
+++ b/core/templates/core/includes/navbar.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="/transactions">Transactions <i class='far fa-credit-card' style='font-size:24px'></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link {% if current == 'Leaderboard' %}active{% endif %}" href="/leaderboard">Leaderboard <i class='fas fa-clipboard-list' style='font-size:24px'></i></a>
+                    <a class="nav-link {% if current == 'Leaderboard' %}active{% endif %}" href="/leaderboard">Leaderboard <i class='fas fa-trophy' style='font-size:24px'></i></a>
                 </li>
                 <li class="nav-item {% if current == 'Rules' %}active{% endif %}">
                     <a class="nav-link" href="/rules">Rules <i class='fa fa-file' style='font-size:24px'></i></a>
