--- a/core/templates/core/leaderboard.html
+++ b/core/templates/core/leaderboard.html
@@ -14,9 +14,9 @@
       <h3 class="text-center">{{message.second}}</h3>
       <br>
       <hr>
-      <h1 class="text-center">Leaderboard</h1>
+        <center><h1><i class="fas fa-trophy" style="font-size:48px;color:red"></i><b>  Leaderboard</b></h1></center>
     {% else %}
-      <h1 class="head"><b>Leaderboard</b></h1>
+      <center><h1><i class="fas fa-trophy" style="font-size:48px;color:red"></i><b>  Leaderboard</b></h1></center>
     {% endif %}
     <hr>
     <br>
@@ -27,9 +27,9 @@
         <thead>
             <tr>
                 <th>#</th>
-                <th>Name</th>
-                <th>Username</th>
-                <th>Total Asset</th>
+                <th><b>NAME</b></th>
+                <th><b>USERNAME</b></th>
+                <th><b>TOTAL ASSET</b></th>
             </tr>
         </thead>
         <tbody>
