--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -7,14 +7,37 @@ body {
     position: relative;
     min-height: 100vh;
     font-size: 14px;
-    overflow-x: hidden;
+    overflow-x:hidden;
 }
 
 .container-fluid {
     padding: 0;
 }
 
+.rulescard{
+  border-radius: 1%;
+  box-shadow: 2px 2px 2px 2px grey;
+  z-index:80;
+  padding-left: 2px;
+  padding-right: 2px;
+  transition: 0.7s;
+  text-align: center;
+  padding-top: 3%;
+  padding-bottom: 2%;
+  background: linear-gradient(225deg, #F3D56A 50%, transparent 50%), #EFEFEF;
+  background-size: 60px 60px;
+  background-position: right top;
+  background-repeat: no-repeat;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, .5);
+  border-top: 5px #F3D56A solid;
+  border-radius: 4px;
+}
+.rulescard:hover{
+  box-shadow: 8px 8px 8px 8px grey;
 
+
+
+}
 /* ------------------------------- Loader ------------------------------- */
 
 
@@ -54,9 +77,9 @@ body {
 
 .landing-page header.landing .landing-bg {
     position: absolute;
-    z-index: -2;
-
-    width: 100%;
+    z-index: -999;
+    max-width: 100%;
+    width: 100vw;
     height: 100vh;
 
     background-image: url('../img/frontpage.jpg');
@@ -121,33 +144,36 @@ body {
 
 .landing-page header.landing .content {
   position: absolute;
-  bottom:57%;
+
   top:0;
+
   background: rgb(0, 0, 0); /* Fallback color */
-  background: rgba(0, 0, 0, 0.6); /* Black background with 0.5 opacity */
+  background: rgba(0, 0, 0, 0.6);
+  background: linear-gradient(225deg, rgba(0,0,255,0.3) 50%, transparent 30%), rgba(128,0,0,0.5);
+   /* Black background with 0.5 opacity */
   color: #f1f1f1;
-  width: 100%;
-  padding: 20px;
-  padding-top:80px;
+  width: 100vw;
+  padding-top: 40vh;
+  padding-bottom: 7vh;
   text-align:center;
 }
 
 .landing-page header.landing .content. img.freemex-logo {
     z-index: 999;
 
-    width: 100%;
-    max-width: 1000px;
-    height: auto;
-    padding-right: 15%;
-    padding-left: 15%;
-    padding-top: 20%;
+    width: 100vw;
+    /*max-width: 1000px;*/
+    /*height: 50vh;*/
+    padding-right: 15vw;
+    padding-left: 15vw;
+    padding-top: 30vh;
     -webkit-filter: drop-shadow(5px 5px 5px #222);
             filter: drop-shadow(5px 5px 5px #222);
 }
 
 .landing-page header.landing .content .nasdaq-intro {
-    padding-top: 17%;
-    padding-bottom: 30px;
+    padding-top: 14vh;
+    padding-bottom: 6vh;
     color: #f0f0f0;
     font-size: 1.4em;
     margin-bottom: 0;
@@ -258,12 +284,6 @@ body {
   padding:3px;
   box-shadow: 4px 4px 4px;
 }
-th{
-  color:blue;
-  box-shadow: 3px 3px 3px;
-  text-align: center;
-
-}
 
 
 
@@ -289,11 +309,12 @@ th{
 }
 /* ----------------------------- Portfolio and Market ----------------------------- */
 .block{
-  background-image: linear-gradient(to right, #ffecd2 0%, #fcb69f 100%);
-  border-radius: 8%;
-  padding:3px;
+
   text-align: center;
-}
+  display:inline-block;
+   text-shadow: 2px 2px white;
+   background-blend-mode: darken;}
+
 .block:hover{
   box-shadow: 6px 6px 6px grey;
 }
@@ -355,7 +376,12 @@ th{
 .market .card {
     margin-top: 2rem;
 }
-
+#market-search{
+  z-index:5;
+  border-left: 4px solid green;
+  padding-left: 3px;
+  box-shadow: 3px 3px ;
+}
 .portfolio .card .card-title,
 .market .card .card-title {
     font-weight: 300;
@@ -423,8 +449,18 @@ th{
 .leaderboard .table {
     margin-top: 2rem;
 }
-
-
+thead{
+  background-color: rgba(0,0,255,0.5);
+  text-shadow: 1px 1px white;
+  color:black;
+  font-size: 16px;
+}
+#leaderboard-search{
+  z-index:5;
+  border-left: 4px solid green;
+  padding-left: 3px;
+  box-shadow: 3px 3px ;
+}
 /* ------------------------------- Rules ------------------------------- */
 
 
@@ -462,8 +498,9 @@ th{
   }
 
     .landing-page header.landing .content img.freemex-logo {
-        padding-right: 10%;
-        padding-left: 10%;
+        padding-right: 10vw;
+        padding-left: 10vw;
+
     }
 
     .landing-page .registration-form input:not([type="submit"]):focus ~ .input-requirements,
