--- a/core/templates/core/includes/rules.html
+++ b/core/templates/core/includes/rules.html
@@ -7,22 +7,22 @@
         and cash wins the game.
     </h5><br>
     <hr><br><div class="row"><div class="col-sm-5">
-    <h1 style='color:blue'><b>Rules</b></h1>
+  <div class="rulescard"> <i class='fa fa-file' style='font-size:36px;color:red'></i><h1> <b>Rules</b></h1>
     <hr>
     <ol>
-        <li>Freemex contest for Aavishkar 2.0 will begin at<br> <span class="time"> 7PM on 29 Oct 2018</span>.</li>
-      <br>  <li>NASDAQ Opens at<span class="time"> 8PM  </span>   and closes at <span class="time"> 2.30AM</span> (IST). The price of stocks are updated only in this period.</li>
+        <li>Freemex contest for Aavishkar 2.0 will begin at 7PM on 29 Oct 2018.</li>
+      <br>  <li>NASDAQ Opens at 8PM  and closes at 2.30AM (IST). The price of stocks are updated only in this period.</li>
         <li>Learn more about NASDAQ Timings <a href="http://www.nasdaq.com/about/trading-schedule.aspx" target="_blank">here</a>.</li>
-        <li>Contest will end at <span class="time"> 2.30AM on 2 Nov 2018</span>.</li>
+        <li>Contest will end at 2.30AM on 2 Nov 2018.</li>
         <li>Person with maximum total asset wins.</li>
         <li>A player must participate in fruitful trade atleast once in order to win.</li>
-    </ol></div><div class="col-sm-1"></div>
-    <div class="col-sm-5">
-    <h1 style='color:blue'><b>Note</b></h1>
-    <hr>
+    </ol></div></div><div class="col-sm-1"></div>
+    <div class="col-sm-5"><div class="rulescard">
+    <i class='fa fa-chain-broken' style='font-size:36px;color:red'></i><h1><b>Note</b></h1>
+    <hr><br>
     <ol>
-        <li>Stock prices are updated every minute.</li>
-        <li>Leaderboard is updated every minute.</li>
-        <li>You may notice some after hour fluctuations in stock prices which are normal.</li>
-    </ol></div></div><hr>
+        <li>Stock prices are updated every minute.</li><br>
+        <li>Leaderboard is updated every minute.</li><br>
+        <li>You may notice some after hour fluctuations in stock prices which are normal.</li><br><br><br><br>
+    </ol></div></div></div><hr>
 </div>
