--- a/core/templates/core/transactions.html
+++ b/core/templates/core/transactions.html
@@ -9,22 +9,23 @@
 <!--Main layout-->
 <div class="container transactions">
     <br>
-    <h1 class="head">Transactions</h1>
+    <div class="rulescard">
+  <i class="far fa-credit-card" style="font-size:36px;color:red"></i>  <h1><b>Transactions</b></h1>
     <hr>
-    <h5>Cash in your hand: $<span id="playercash">{{ player.cash }}</span></h5>
+    <h5>Cash in your hand: $<span id="playercash">{{ player.cash }}</span></h5></div><br>
     <br>
     <input type="text" id="market-search" onkeyup="marketSearch()" placeholder="Search for stock names..">
-    <br><br>
+    <br><br><br>
 
     <table class="table transactions-sheet" >
     	<thead>
     		<tr>
-    			<th scope="col" > Stock name</th>
-    			<th scope="col" > Status</th>
-    			<th scope="col"> Quantity</th>
-    			<th scope="col" > Stock code</th>
-    			<th scope="col"> Price</th>
-    			<th scope="col"> Gain/loss</th>
+    			<th scope="col" ><b> Stock name</b></th>
+    			<th scope="col" ><b> Status</b></th>
+    			<th scope="col"><b> Quantity</b></th>
+    			<th scope="col" > <b>Stock code</b></th>
+    			<th scope="col"><b> Price</b></th>
+    			<th scope="col"> <b>Gain/loss</b></th>
     		</tr>
     	</thead>
     	<tbody>
